Refactor API endpoints and services logic